# leap-arcade-v2

./: .gitignore  AGENTS.md  CONTEXT.md  DEPLOYMENT_GUIDE.md  DESIGN.md  Makefile  PRODUCT.md  README.md  docker-compose.test.yml  docker-compose.yml
backend/: .env.example  .gitignore  AGENTS.md  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2961e788e9c3_create_crossword_tables.py  a1b2c3d4e5f6_wiki_rounds_and_attempts.py  a7b8c9d0e1f2_word_hunt_puzzles_words_finds.py  d0e1f2a3b4c5_picture_puzzles_and_attempts.py  e21296ea2b2c_initial_schema.py  e4f5a6b7c8d9_four_pics_questions_and_attempts.py  f3a8b1c2d4e5_rapid_fire_answer_selected_option.py  f5a6b7c8d9e0_pinpoint_puzzles_and_attempts.py
backend/docs/patterns/: index.md
backend/leap/: main.py
backend/leap/api/: deps.py  main.py
backend/leap/config/: constants.py  errors.py  settings.py
backend/leap/core/: auth.py  cache_invalidation.py  context_manager.py  exceptions.py
backend/leap/dao/: base_pg_dao.py  crossword_entry_dao.py  crossword_puzzle_dao.py  crossword_solve_dao.py  four_pics_question_attempt_dao.py  four_pics_question_dao.py  game_session_dao.py  picture_puzzle_attempt_dao.py  picture_puzzle_dao.py  pinpoint_puzzle_attempt_dao.py  pinpoint_puzzle_dao.py  player_dao.py  rapid_fire_answer_dao.py  rapid_fire_question_dao.py  wiki_puzzle_attempt_dao.py  wiki_round_dao.py  word_hunt_find_dao.py  word_hunt_puzzle_dao.py  word_hunt_word_dao.py
backend/leap/games/: base.py
backend/tests/: conftest.py  fakes.py
docs/: game-req.md  (+4 more)
(+584 files in other folders)
