[project]
name = "leap-backend"
version = "0.1.0"
description = "LEAP Tournament Platform backend"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "uvicorn[standard]>=0.46.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "jinja2>=3.1.6",
    "pyjwt>=2.10.1",
    "structlog>=25.5.0",
    "pytz>=2026.2",
    "gunicorn>=23.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["leap"]

[dependency-groups]
dev = [
    "asgi-lifespan>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]

[project.scripts]
dev   = "leap.main:dev"
start = "leap.main:start"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
